--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "1.0.0",
   "dependencies": {
     "email-validator": "^1.0.7",
-    "validity": "^1.0.0"
+    "@clocklimited/validity": "^1.1.3"
   },
   "scripts": {
     "lint": "eslint .",
