--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "validity-email",
+  "name": "@clocklimited/validity-email",
   "description": "Validity style validator to ensure that a property is a valid email address.",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "dependencies": {
     "email-validator": "^1.0.7",
     "@clocklimited/validity": "^1.1.3"
@@ -14,7 +14,7 @@
     "posttest": "(istanbul check-coverage --statements 90 --branches 90 --functions 100 --lines 90 && rm -rf coverage) || echo Look at 'coverage/lcov-report/index.html' to find out more"
   },
   "publishConfig": {
-    "registry": "http://registry.npmjs.org"
+    "registry": "https://registry.npmjs.org"
   },
   "files": [
     "index.js"
@@ -33,6 +33,6 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:serby/validity-email.git"
+    "url": "git@github.com:clocklimited/validity-email.git"
   }
 }
